--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"dotenv": "^16.0.0",
 		"express": "^4.17.1",
 		"jsonwebtoken": "^8.5.1",
+		"mongoose": "^6.2.5",
 		"mysql": "^2.14.1",
 		"mysql2": "^2.3.3",
 		"reflect-metadata": "^0.1.10",
@@ -27,6 +28,7 @@
 	"devDependencies": {
 		"@types/cors": "^2.8.12",
 		"@types/jsonwebtoken": "^8.5.8",
+		"@types/mongoose": "^5.11.97",
 		"@types/node": "^8.0.29",
 		"morgan": "^1.10.0",
 		"nodemon": "^2.0.15",
